--- a/package.json
+++ b/package.json
@@ -11,33 +11,34 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
+    "@aws-sdk/client-s3": "^3.700.0",
     "@prisma/client": "^5.20.0",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "next": "^14.2.0",
     "next-auth": "^4.24.0",
     "openai": "^4.70.0",
-    "@aws-sdk/client-s3": "^3.700.0",
-    "zod": "^3.23.0",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2"
+    "pdf-parse": "^1.1.4",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "zod": "^3.23.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jest": "^29.5.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.7",
-    "typescript": "^5",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.0",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8",
     "autoprefixer": "^10.0.1",
-    "prisma": "^5.20.0",
-    "@types/jest": "^29.5.0",
+    "eslint": "^8",
+    "eslint-config-next": "^16.0.8",
+    "fast-check": "^3.22.0",
     "jest": "^29.7.0",
+    "postcss": "^8",
+    "prisma": "^5.20.0",
+    "tailwindcss": "^3.4.0",
     "ts-jest": "^29.2.0",
-    "fast-check": "^3.22.0"
+    "typescript": "^5"
   }
 }
