--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.20.0",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.556.0",
     "next": "^14.2.0",
     "next-auth": "^4.24.0",
     "openai": "^4.70.0",
