--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-s3": "^3.700.0",
     "@prisma/client": "^5.20.0",
     "bcrypt": "^5.1.1",
+    "googleapis": "^168.0.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.556.0",
     "next": "^14.2.0",
@@ -32,7 +33,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.8",
     "fast-check": "^3.22.0",
     "jest": "^29.7.0",
